Turn on/off axial force

--- a/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
+++ b/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
@@ -1,8 +1,8 @@
 <div class="c-subNavArea">
   <nav>
     <ul class="c-subNavArea__nav">
-      <li class="c-subNavArea__navItem" *ngFor="let groupe of groupe_name; index as i" >
-        <a (click)="activePageChenge(i)" id="saf{{i}}" class="c-subNavArea__navItemTitle">
+      <li class="c-subNavArea__navItem" *ngFor="let groupe of groupe_name; index as i">
+        <a (click)="activePageChenge(i, groupe)" id="saf{{i}}" class="c-subNavArea__navItemTitle">
           <span>{{groupe}}</span>
         </a>
       </li>
@@ -12,11 +12,23 @@
 
 <div class="tabContent">
   <ul class="tab-select-items">
-    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'rsb_con'}" (click)="setActiveTab('rsb_con')" translate>safety-factors-material-strengths.rsb_con</li>
+    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'rsb_con'}" (click)="setActiveTab('rsb_con')"
+      translate>safety-factors-material-strengths.rsb_con</li>
     <!--<li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'steel'}" (click)="setActiveTab('steel')" translate>safety-factors-material-strengths.steel</li>-->
-    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'pile'}" (click)="setActiveTab('pile')" translate>safety-factors-material-strengths.pile</li>
+    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'pile'}" (click)="setActiveTab('pile')"
+      translate>safety-factors-material-strengths.pile</li>
   </ul>
 
+  <div class="download-item">
+    <legend translate>calculation-print.axis_maxmin</legend>
+    <div>
+      <label class="checkbox-container">
+        <input type="checkbox" name="calculate_moment" class="checkbox-input" (click)="changeButton($event)"
+          [value]="consider_moment_checked" [(ngModel)]="consider_moment_checked" [checked]="consider_moment_checked" />
+        <span translate class="checkbox-parts">calculation-print.consider</span>
+      </label>
+    </div>
+  </div>
   <div class="tab-inner">
     <div class="item-container" [ngClass]="{'hide': activeTab !== 'rsb_con'}">
       <div class="safety-factors">
@@ -25,7 +37,7 @@
           <app-sheet #grid1 [options]="options1"></app-sheet>
         </div>
       </div>
-  
+
       <div class="material-strength">
         <h5 translate>safety-factors-material-strengths.r_mta</h5>
         <div class="table-container">
@@ -37,7 +49,7 @@
         <app-sheet #grid3 [options]="options3" class="no-table"></app-sheet>
       </div>
     </div>
-  
+
     <div class="item-container" [ngClass]="{'hide': activeTab !== 'steel'}">
       <div class="safety-factors">
         <h5 translate>safety-factors-material-strengths.safe</h5>
@@ -45,7 +57,7 @@
           <app-sheet #grid4 [options]="options4" class="no-table"></app-sheet>
         </div>
       </div>
-    
+
       <div class="material-strength">
         <h5 translate>safety-factors-material-strengths.s_mta</h5>
         <div class="table-container">
@@ -53,7 +65,7 @@
         </div>
       </div>
     </div>
-  
+
     <div class="item-container" [ngClass]="{'hide': activeTab !== 'pile'}">
       <div class="pile-factors">
         <h5 translate>safety-factors-material-strengths.pile</h5>
@@ -63,21 +75,21 @@
               <th rowspan="2" colspan="2">
                 <p translate>safety-factors-material-strengths.method</p>
               </th>
-              <th colspan="3">          
+              <th colspan="3">
                 <p translate>safety-factors-material-strengths.ρc</p>
               </th>
               <th rowspan="2" width="110px">
-              <p translate>safety-factors-material-strengths.vcd</p>
+                <p translate>safety-factors-material-strengths.vcd</p>
               </th>
             </tr>
             <tr>
-              <th width="80px">          
+              <th width="80px">
                 <p translate>safety-factors-material-strengths.cs</p>
               </th>
-              <th width="80px">          
+              <th width="80px">
                 <p translate>safety-factors-material-strengths.as</p>
               </th>
-              <th width="80px">          
+              <th width="80px">
                 <p translate>safety-factors-material-strengths.young</p>
               </th>
             </tr>
@@ -86,13 +98,8 @@
             <ng-container *ngFor="let item of options6; index as i">
               <tr>
                 <td width="20px">
-                  <input type="radio" 
-                    name="pile_factor" 
-                    id="pile_factor{{i}}"
-                    [(ngModel)]="pile_factor_select_id" 
-                    [value]="item.id"
-                    [checked]="item.selected" 
-                    (change)="setPileFactor(i)" />
+                  <input type="radio" name="pile_factor" id="pile_factor{{i}}" [(ngModel)]="pile_factor_select_id"
+                    [value]="item.id" [checked]="item.selected" (change)="setPileFactor(i)" />
                 </td>
                 <td style="text-align: left" width="200px">{{item.title}}</td>
                 <td>{{item.rfck.toFixed(2)}}</td>
