Fix error hide button when enter value at the end table

--- a/src/app/components/section-forces/section-forces.component.html
+++ b/src/app/components/section-forces/section-forces.component.html
@@ -1,51 +1,53 @@
- <div class="c-subNavArea">
-  <nav>
-    <ul class="c-subNavArea__nav">
-      <li class="c-subNavArea__navItem">
-        <a (click)="activePageChenge(0)" id="foc0" class="c-subNavArea__navItemTitle">
-          <span translate>section-forces.b_check</span>
-
-        </a>
-      </li>
-      <li class="c-subNavArea__navItem">
-        <a (click)="activePageChenge(1)" id="foc1" class="c-subNavArea__navItemTitle">
-          <span translate>section-forces.s_check</span>
-        </a>
-      </li>
-      <!-- ねじり -->
-      <li class="c-subNavArea__navItem">
-        <a (click)="activePageChenge(2)" id="foc2" class="c-subNavArea__navItemTitle">
-          <span translate>section-forces.t_check</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <div class="tobble-section">
-    <div
-      class="tobble-container"
-      *ngFor="let group of currentColGroupKeys"
-      (click)="toggleDataLoad(group)"
-      [ngClass]="{ active: toggleStatus[group] }"
-    >
-      <div class="tobble">
-        <div class="tobble-icon"></div>
-      </div>
-      <div class="tobble-label">
-        <ng-container [ngSwitch]="group">
-          <span *ngSwitchCase="'stress'">耐久性</span>
-          <span *ngSwitchCase="'safe-ff'">安全性（疲労破壊）</span>
-          <span *ngSwitchCase="'safe-destruct'">安全性（破壊）</span>
-          <span *ngSwitchCase="'recover-ex-earth'"
-            >復旧性（損傷）地震時以外</span
-          >
-          <span *ngSwitchCase="'recover-earth'">復旧性（損傷）地震時</span>
-          <span *ngSwitchCase="'rebar'">最小鉄筋量</span>
-        </ng-container>
+<div class="s-border">
+  <div class="c-subNavArea">
+    <nav>
+      <ul class="c-subNavArea__nav">
+        <li class="c-subNavArea__navItem">
+          <a (click)="activePageChenge(0)" id="foc0" class="c-subNavArea__navItemTitle">
+            <span translate>section-forces.b_check</span>
+  
+          </a>
+        </li>
+        <li class="c-subNavArea__navItem">
+          <a (click)="activePageChenge(1)" id="foc1" class="c-subNavArea__navItemTitle">
+            <span translate>section-forces.s_check</span>
+          </a>
+        </li>
+        <!-- ねじり -->
+        <li class="c-subNavArea__navItem">
+          <a (click)="activePageChenge(2)" id="foc2" class="c-subNavArea__navItemTitle">
+            <span translate>section-forces.t_check</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="tobble-section">
+      <div
+        class="tobble-container"
+        *ngFor="let group of currentColGroupKeys"
+        (click)="toggleDataLoad(group)"
+        [ngClass]="{ active: toggleStatus[group] }"
+      >
+        <div class="tobble">
+          <div class="tobble-icon"></div>
+        </div>
+        <div class="tobble-label">
+          <ng-container [ngSwitch]="group">
+            <span *ngSwitchCase="'stress'">耐久性</span>
+            <span *ngSwitchCase="'safe-ff'">安全性（疲労破壊）</span>
+            <span *ngSwitchCase="'safe-destruct'">安全性（破壊）</span>
+            <span *ngSwitchCase="'recover-ex-earth'"
+              >復旧性（損傷）地震時以外</span
+            >
+            <span *ngSwitchCase="'recover-earth'">復旧性（損傷）地震時</span>
+            <span *ngSwitchCase="'rebar'">最小鉄筋量</span>
+          </ng-container>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-<div class="c-sheetArea">
-  <app-sheet #grid [options]="options"></app-sheet>
+  
+  <div class="c-sheetArea">
+    <app-sheet #grid [options]="options"></app-sheet>
+  </div>
 </div>
