--- a/src/app/components/section-forces/section-forces.component.scss
+++ b/src/app/components/section-forces/section-forces.component.scss
@@ -1,5 +1,5 @@
 .c-subNavArea {
-    padding-top: 11px;
+    padding-top: 10px;
     background: var(--base-950);
 
     &__nav {
@@ -106,10 +106,15 @@
 }
 
 .c-sheetArea {
-    padding-top: 24px;
+    padding-top: 10px;
     padding-left: 16px;
-    padding-right: 16px;
-    padding-bottom: 16px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     background: var(--base-900);
     height: 688px;
+}
+
+.s-border{
+    position: fixed;
+    width: 89.5%;
 }
