1: Add "Road" to "Apply" under "Control
2: Add a “Road” version to “Specification”.
3: Prepare a new menu page for “Road” independently of current menu page

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -131,22 +131,23 @@
             </label>
           </div>
         </ng-container>
-  
-        <!-- 耐用年数 セクション -->
-        <div class="d-flex service-life">
-          <p translate>fatigues.durable</p>
-          <input id="T" name="T" type="text" [(ngModel)]="service_life" />
-        </div>
-        <div class="d-flex jA-jB">
+        <ng-container *ngIf="menuService.selectedRoad === false">
+          <!-- 耐用年数 セクション -->
           <div class="d-flex service-life">
-            <p>jA</p>
-            <input id="jA" name="jA" type="text" [(ngModel)]="train_A_count" />
+            <p translate>fatigues.durable</p>
+            <input id="T" name="T" type="text" [(ngModel)]="service_life" />
           </div>
-          <div class="d-flex service-life">
-            <p>jB</p>
-            <input id="jB" name="jB" type="text" [(ngModel)]="train_B_count" />
+          <div class="d-flex jA-jB">
+            <div class="d-flex service-life">
+              <p>jA</p>
+              <input id="jA" name="jA" type="text" [(ngModel)]="train_A_count" />
+            </div>
+            <div class="d-flex service-life">
+              <p>jB</p>
+              <input id="jB" name="jB" type="text" [(ngModel)]="train_B_count" />
+            </div>
           </div>
-        </div>
+        </ng-container>
       </div>
     </div>
   </section>
