--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,32 @@
             <span translate>app.basic_info</span>
           </a>
         </li>
+        <!-- Material strength - verification condition         -->
+        <li class="c-mainNavArea__navItem" *ngIf="menuService.selectedRoad">
+          <a
+            routerLink="./material-strength-verification-conditions"
+            routerLinkActive="selected-item"
+            (click)="activePageChenge(11)"
+            id="11"
+            class="c-mainNavArea__navItemTitle"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8 12C8 11.4477 8.44772 11 9 11H15C15.5523 11 16 11.4477 16 12C16 12.5523 15.5523 13 15 13H9C8.44772 13 8 12.5523 8 12Z"
+                fill="white"
+              />
+              <circle cx="5" cy="12" r="4" stroke="white" stroke-width="2" />
+              <circle cx="19" cy="12" r="4" stroke="white" stroke-width="2" />
+            </svg>
+            <span translate>app.material_condition</span>
+          </a>
+        </li>
         <li class="c-mainNavArea__navItem">
           <a
             routerLink="./members"
@@ -291,7 +317,7 @@
             <span translate>app.shear</span>
           </a>
         </li>
-        <li class="c-mainNavArea__navItem">
+        <li class="c-mainNavArea__navItem" *ngIf="!menuService.selectedRoad">
           <a
             routerLink="./crack"
             routerLinkActive="selected-item"
@@ -317,7 +343,7 @@
             <span translate>app.crack</span>
           </a>
         </li>
-        <li class="c-mainNavArea__navItem">
+        <li class="c-mainNavArea__navItem" *ngIf="!menuService.selectedRoad">
           <a
             routerLink="./fatigues"
             routerLinkActive="selected-item"
@@ -342,7 +368,7 @@
             <span translate>app.fatigues</span>
           </a>
         </li>
-        <li class="c-mainNavArea__navItem">
+        <li class="c-mainNavArea__navItem" *ngIf="!menuService.selectedRoad">
           <a
             routerLink="./safety-factors-material-strengths"
             routerLinkActive="selected-item"
@@ -370,6 +396,32 @@
               />
             </svg>
             <span translate>app.sf_ms</span>
+          </a>
+        </li>
+        <!-- Durability Data -->
+        <li class="c-mainNavArea__navItem"  *ngIf="menuService.selectedRoad">
+          <a
+            routerLink="./durability_data"
+            routerLinkActive="selected-item"
+            (click)="activePageChenge(12)"
+            id="12"
+            class="c-mainNavArea__navItemTitle"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8 12C8 11.4477 8.44772 11 9 11H15C15.5523 11 16 11.4477 16 12C16 12.5523 15.5523 13 15 13H9C8.44772 13 8 12.5523 8 12Z"
+                fill="white"
+              />
+              <circle cx="5" cy="12" r="4" stroke="white" stroke-width="2" />
+              <circle cx="19" cy="12" r="4" stroke="white" stroke-width="2" />
+            </svg>
+            <span translate>app.durability_data</span>
           </a>
         </li>
         <li class="c-mainNavArea__navItem">
