--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
@@ -1,3 +1,106 @@
-<p>
-  material-strength works!
-</p>
+<div class="c-subNavArea">
+  <nav>
+    <ul class="c-subNavArea__nav">
+      <li class="c-subNavArea__navItem" *ngFor="let groupe of groupe_name; index as i">
+        <a (click)="activePageChenge(i, groupe)" id="saf{{i}}" class="c-subNavArea__navItemTitle">
+          <span>{{groupe}}</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+<div class="tabContent">
+  <ul class="tab-select-items">
+    <li class="tab-select-item"
+      translate>material-strength-verifiaction-condition.rsb_con</li>    
+    <li class="tab-select-item" 
+      translate>material-strength-verifiaction-condition.pile</li>
+      <li class="tab-select-item" 
+      translate>material-strength-verifiaction-condition.rsb_con</li>    
+    <li class="tab-select-item"
+      translate>material-strength-verifiaction-condition.pile</li>
+  </ul>
+
+
+  <div class="tab-inner">
+    <div class="item-container">    
+      <!-- [ngClass]="{'hide': activeTab !== 'rsb_con'}" -->
+
+      <div class="material-strength">
+        <h5 translate>material-strength-verifiaction-condition.r_mta</h5>
+        <div class="table-container">
+          <!-- <app-sheet #grid2 [options]="options2" class="no-table"></app-sheet> -->
+        </div>
+      </div>
+      <div class="concrete-strength">
+        <h5 translate>material-strength-verifiaction-condition.c_mta</h5>
+        <!-- <app-sheet #grid3 [options]="options3" class="no-table"></app-sheet> -->
+      </div>
+    </div>
+
+    <div class="item-container" >
+      <div class="safety-factors">
+        <h5 translate>material-strength-verifiaction-condition.safe</h5>
+        <div class="table-container">
+          <!-- <app-sheet #grid4 [options]="options4" class="no-table"></app-sheet> -->
+        </div>
+      </div>
+
+      <div class="material-strength">
+        <h5 translate>material-strength-verifiaction-condition.s_mta</h5>
+        <div class="table-container">
+          <!-- <app-sheet #grid5 [options]="options5" class="no-table"></app-sheet> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container" >
+      <div class="pile-factors">
+        <h5 translate>material-strength-verifiaction-condition.pile</h5>
+        <table>
+          <thead>
+            <tr>
+              <th rowspan="2" colspan="2">
+                <p translate>material-strength-verifiaction-condition.method</p>
+              </th>
+              <th colspan="3">
+                <p translate>material-strength-verifiaction-condition.ρc</p>
+              </th>
+              <th rowspan="2" width="110px">
+                <p translate>material-strength-verifiaction-condition.vcd</p>
+              </th>
+            </tr>
+            <tr>
+              <th width="80px">
+                <p translate>material-strength-verifiaction-condition.cs</p>
+              </th>
+              <th width="80px">
+                <p translate>material-strength-verifiaction-condition.as</p>
+              </th>
+              <th width="80px">
+                <p translate>material-strength-verifiaction-condition.young</p>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let item of options6; index as i">
+              <tr>
+                <td width="20px">
+                  <input type="radio" name="pile_factor" id="pile_factor{{i}}" [(ngModel)]="pile_factor_select_id"
+                    [value]="item.id" [checked]="item.selected" (change)="setPileFactor(i)" />
+                </td>
+                <td style="text-align: left" width="200px">{{item.title}}</td>
+                <td>{{item.rfck.toFixed(2)}}</td>
+                <td>{{item.rfbok.toFixed(2)}}</td>
+                <td>{{item.rEc.toFixed(2)}}</td>
+                <td>{{item.rVcd.toFixed(2)}}</td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
