Update var "vis_u"

--- a/src/app/components/durability-data/durability-data.component.html
+++ b/src/app/components/durability-data/durability-data.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul class="c-subNavArea__nav">
       <li class="c-subNavArea__navItem" *ngFor="let groupe of table_datas; index as i">
-        <a (click)="activePageChenge(i)" id="crk{{i}}" class="c-subNavArea__navItemTitle">
+        <a (click)="activePageChenge(i)" id="dura{{i}}" class="c-subNavArea__navItemTitle">
           <span>{{getGroupeName(i)}}</span>
         </a>
       </li>
