--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
@@ -74,11 +74,47 @@
       </div>
     </div>
     <div class="item-container" [ngClass]="{'hide': activeTab !== 'sei_ver'}">
-      <div class="material-strength">
+      <div class="safety-factors">
         <h5 translate>material-strength-verifiaction-condition.sei_ver</h5>
-        <div class="table-container">
-          <app-sheet #grid4 [options]="options4" class="no-table"></app-sheet>
-        </div>
+        <table>
+          <thead>
+            <tr>
+              <th rowspan="2" >
+                <p translate>material-strength-verifiaction-condition.si</p>
+              </th>
+              <th rowspan="2" >
+                <p translate>material-strength-verifiaction-condition.pl_ex</p>
+              </th>
+              <th rowspan="2" >
+                <p translate style="font-size: 10px;">material-strength-verifiaction-condition.lv_e</p>
+              </th>
+            </tr>
+            
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let item of options4; index as i">
+              <tr *ngIf="item.title != null">
+                <td style="text-align: left" >{{item.title}}</td>               
+                <td class="center" [width]="70" *ngIf="table2_datas[i][0].value < 35; else elseBlock">
+                  <input type="checkbox">                  
+                </td>    
+                <ng-template  #elseBlock>
+                  <td class="center" [width]="70" >
+                    <input type="radio">
+                  </td>                  
+                 </ng-template>           
+                <td style="text-align: center;" [width]="70" *ngIf="table2_datas[i][0].value < 35; else elseBlock1">
+                  {{item.range}}
+                </td>    
+                <ng-template  #elseBlock1>
+                  <td style="text-align: center;" [width]="70" >       
+                    {{""}}               
+                  </td>                  
+                 </ng-template>                
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
       </div>
     </div>
 
