add image detail to basic information page

--- a/src/app/components/basic-information/basic-information.component.scss
+++ b/src/app/components/basic-information/basic-information.component.scss
@@ -10,7 +10,17 @@
   }
 
 }
-
+.basic-img{
+  padding-right: 40px;
+  img{
+    width: 100%;
+  }
+}
+.basic-note-img{
+  span{
+    font-size: 12px;
+  }
+}
 .right-contents{
   position: relative; 
   float: left;
