--- a/src/app/components/basic-information/basic-information.component.html
+++ b/src/app/components/basic-information/basic-information.component.html
@@ -22,5 +22,10 @@
         </div>
       </div>
     </div>
+    
+    <div class="container-fluid mt-16 basic-note-img"><span translate>basic-information.note_img</span></div>
+
+    <div class="container-fluid mt-16 basic-img" ><img [src]="imgLink"></div>
   </div>
+
 </ng-container>
