Add image formula for cross section

--- a/src/app/components/section-forces/section-forces.component.html
+++ b/src/app/components/section-forces/section-forces.component.html
@@ -50,4 +50,5 @@
   <div class="c-sheetArea">
     <app-sheet #grid [options]="options"></app-sheet>
   </div>
+  <div class="container-fluid mt-16 section-img" ><img [src]="imgLink"></div>
 </div>
