get data table Other conditions

--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.scss
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.scss
@@ -89,6 +89,10 @@ legend {
       text-align: center;
       vertical-align: middle;
     }
+
+    .line{
+      border:red 2px;
+    }
   }
   
   .table-container {
