--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,20 +44,25 @@
             id="11"
             class="c-mainNavArea__navItemTitle"
           >
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8 12C8 11.4477 8.44772 11 9 11H15C15.5523 11 16 11.4477 16 12C16 12.5523 15.5523 13 15 13H9C8.44772 13 8 12.5523 8 12Z"
-                fill="white"
-              />
-              <circle cx="5" cy="12" r="4" stroke="white" stroke-width="2" />
-              <circle cx="19" cy="12" r="4" stroke="white" stroke-width="2" />
-            </svg>
+          <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M12.5 1L17.2631 9.25H7.73686L12.5 1Z" fill="white" />
+          <path d="M12.5 1L17.2631 9.25H7.73686L12.5 1Z" stroke="black" />
+          <circle cx="16.5" cy="16.5" r="4.5" fill="white" />
+          <rect
+            x="9.5"
+            y="11"
+            width="7.5"
+            height="7.5"
+            transform="rotate(90 9.5 11)"
+            fill="white"
+          />
+        </svg>
             <span translate>app.material_condition</span>
           </a>
         </li>
@@ -407,20 +412,21 @@
             id="12"
             class="c-mainNavArea__navItemTitle"
           >
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8 12C8 11.4477 8.44772 11 9 11H15C15.5523 11 16 11.4477 16 12C16 12.5523 15.5523 13 15 13H9C8.44772 13 8 12.5523 8 12Z"
-                fill="white"
-              />
-              <circle cx="5" cy="12" r="4" stroke="white" stroke-width="2" />
-              <circle cx="19" cy="12" r="4" stroke="white" stroke-width="2" />
-            </svg>
+          <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M2 5L8.5 3L5 12.5L17 5L11.5 17L21 14L18.5 21.5"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
             <span translate>app.durability_data</span>
           </a>
         </li>
