--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
@@ -86,7 +86,7 @@
               <th rowspan="2">
                 <p translate>material-strength-verifiaction-condition.pl_ex</p>
               </th>
-              <th rowspan="2">
+              <th rowspan="2" [ngClass]="{'hideCol': fck > 30 }">
                 <p translate style="font-size: 10px;">material-strength-verifiaction-condition.lv_e</p>
               </th>
             </tr>
@@ -101,13 +101,13 @@
                   <input type="checkbox" name="pla_ex{{i}}" id="pla_ex{{i}}" [value]="item.id"
                     [checked]="item.selected"  (change)="setCheckboxPlastic(i)" />
                 </td>
-                <td style="text-align: center;" width="80px" *ngIf="!item.selected; else elseBlock" >
+                <td  style="text-align: center;" width="80px" [ngClass]="{'hideCol': fck > 30 }" *ngIf="!item.selected ; else elseBlock" >
                   <div class="diagonalRising"></div>
                 </td>
               </tr>
               <ng-template #elseBlock>                
-                  <td style="width:85px" >
-                    <input class="levelType" type="text" value="{{item.type!=0?item.type:''}}">
+                  <td  style="width:85px" [ngClass]="{'hideCol': fck > 30 }" >
+                    <input class="levelType" type="text" value="{{item.type!=0?item.type:''}}" (change)="setLevel(i, $event)" >
                   </td>             
               </ng-template>
             </ng-container>
